src/test/deca/context/valid/custom/Declaration/decl_void_method.deca
class Risitas{
    void issou(){
        println("issou");
    }
}

{
    Risitas risitas = new Risitas();
    risitas.issou();
}