src/test/deca/context/invalid/custom/object/up_cast.deca
class A {
    int x = 1;
}

class B extends A {
    int x = 2;
}

{
    B b = new B();
    println(b.x);

    b = (A) (b);
    println(b.x);
}